Agregando Repositorios y Servicios con sus implementaciones

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=FARMACIA LOS MAYHUA
+
+spring.datasource.url=jdbc:mysql://localhost:3306/farmacia_los_mayhua
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+
